tests/gen/testdata/configs/fail/platform_extension_missing_services_cidr.jsonnet
// OKE extension requires services_cidr parameter
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      shared_project_network: { network: { vcn: '10.0.72.0/21' } },
      projects: { proj1: {} },
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/21' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
            },
          },
        },
      },
    },
  },
}
